TODO:
- TODO [Code Tweak] Standardise fetching metal variant / type and relevant ingot
- TODO [Tweak] Config option to disable iron bloom modifications from helve hammers
- TODO [Compatibility] Stop knapster from autocompleting when hitting in flip tool mode
- TODO Fight cheating players that try to remove tongs while setting the tool mode
- TODO Store overall transform for flip tool mode to properly reconstruct recipe outline rotation.
    Current method can have bugs and is harder to maintain.

- [Localisation] Added pl localisation