@@ -1,8 +1,11 @@
+using System;
 using System.Collections.Generic;
 using System.Linq;
 using HarmonyLib;
-using Vintagestory.API.Common;
+using SmithingPlus.Util;
 using Vintagestory.GameContent;
+using AssetLocation = Vintagestory.API.Common.AssetLocation;
+using ItemStack = Vintagestory.API.Common.ItemStack;
 
 namespace SmithingPlus.SmithWithBits;
 
@@ -15,10 +18,10 @@ public class IngotNoBitRecipePatch
     public static void GetMatchingRecipes_Postfix(ItemIngot __instance, ref List<SmithingRecipe> __result,
         ItemStack stack)
     {
-        __result = __result.Where((System.Func<SmithingRecipe, bool>)(
+        __result = __result.Where((Func<SmithingRecipe, bool>)(
             r => r.Ingredient.SatisfiesAsIngredient(stack)
-                 && !(r.Ingredient.RecipeAttributes?["nuggetRecipe"]?.AsBool() ?? false)
-        )).OrderBy((System.Func<SmithingRecipe, AssetLocation>)(
+                 && !(r.Ingredient.RecipeAttributes?[ModRecipeAttributes.NuggetRecipe]?.AsBool() ?? false)
+        )).OrderBy((Func<SmithingRecipe, AssetLocation>)(
                 r => r.Output.ResolvedItemstack.Collectible.Code)
         ).ToList();
     }
