@@ -10,7 +10,7 @@
   "charattribute-sp:smithingQuality-0.2": "Increases smithing projects durability by 20%",
   "charattribute-sp:smithingQuality--0.1": "Decreases smithing projects durability by 10%",
 
-  "Requires {0} voxels": "Requires {0} voxels",
+  "Requires any of: ": "Requires any of: ",
   "with": "with",
 
   "Mold for": "Mold for",
