@@ -10,7 +10,7 @@
   "charattribute-sp:smithingQuality-0.2": "Увеличивает прочность кузнечных изделий на 20%",
   "charattribute-sp:smithingQuality--0.1": "Снижает прочность кузнечных изделий на 10%",
 
-  "Requires {0} voxels": "Требуется {0} вокселей",
+  "Requires any of: ": "Требуется любой из: ",
   "with": "с",
 
   "Mold for": "Форма для",
