@@ -1,0 +1,5 @@
+{
+  "pageCode": "smithingplus:handbookguide",
+  "title": "smithingplus:handbookguide-title",
+  "text": "smithingplus:handbookguide-text"
+}
