@@ -44,5 +44,7 @@
   "item-forlornblade-meteoriciron": "Estoc blade",
   "itemdesc-item-forlornblade-meteoriciron": "This recipe should not be visible, blade can only be repaired",
   "itemcraftdesc-item-forlornblade-meteoriciron": "This recipe should not be visible, blade can only be repaired",
-  "heldhelp-scrapecrucible": "<i>Scrape with <hk>rightmouse</hk> to recover bits</i>"
+  "heldhelp-scrapecrucible": "<i>Scrape with <hk>rightmouse</hk> to recover bits</i>",
+  "handbookguide-title": "Smithing Plus – Starter Guide",
+  "handbookguide-text": "<strong>Smithing Plus – Smithing additions</strong>\n\nSmithing Plus implements various tweaks that enhance the vanilla smithing experience. The features are organized into distinct categories, and the configuration file allows you to enable or disable each category individually, as well as fine-tune each feature's behavior.\n\n<strong>Smith with bits</strong>\nEnables smithing with <a href=\"handbook://item-metalbit-copper\">metal bits</a> and native nuggets, including <a href=\"handbook://item-nugget-nativecopper\">native copper</a>, <a href=\"handbook://item-nugget-nativesilver\">native silver</a>, and <a href=\"handbook://item-nugget-nativegold\">native gold</a>. If <a href=\"https://mods.vintagestory.at/show/mod/8054\">Geology Additions</a> is installed, <a href=\"handbook://item-nugget-nativeplatinum\">native platinum</a> is also supported.\n\nTo smith with bits, simply <hk>shift</hk>-click on an <a href=\"handbooksearch://anvil\">anvil</a>—just as you would when using an <a href=\"handbook://item-ingot-copper\">ingot</a>—while holding a hot metal bit. Like ingots in the base game, bits must be heated above their workable temperature (typically half of the melting point). To heat bits, warm them in a <a href=\"handbook://block-crucible-burned\">crucible</a> placed over a <a href=\"handbook://block-firepit-lit\">firepit</a>, and remove them before they begin to melt. Fuel with lower burning temperature such as <a href=\"handbook://item-firewood\">firewood</a> or <a href=\"handbook://block-peatbrick\">peat</a> is recommended.\n\nThe configuration allows you to disable the use of bits for topping up existing smithing projects or for new projects independently.\n\n<strong>Tool recovery</strong>\nTool recovery deviates significantly from vanilla behavior by allowing you to recover and repair broken metal tools. When a tool breaks—provided it has an associated smithing recipe or its crafting ingredients do, and it meets the configured selector—it will drop a broken tool head. This broken head acts as a work item that can be completed by smithing on an <a href=\"handbooksearch://anvil\">anvil</a>. Smithing with bits pairs perfectly with this feature.\n\nThere are many configuration options available, ranging from globally reducing the durability of repairable tools to managing the durability penalty incurred from multiple repairs. You can also configure which attributes to ignore, such as <i>smithing quality</i> from <a href=\"https://mods.vintagestory.at/show/mod/247\">XSkills</a> or <i>enchantments</i> from <a href=\"https://mods.vintagestory.at/krpgenchantment\">KRPG Enchantment</a>, which by default will carry over to the repaired tool. Additionally, you can choose to make certain tool heads non-repairable; these can then be recycled into bits by using a <a href=\"handbooksearch://chisel\">chisel</a> in the crafting grid.\n\n<strong>Bits recovery</strong>\nThis category introduces the ability to recover bits when splitting material on an <a href=\"handbooksearch://anvil\">anvil</a>. Due to the voxel-to-bit conversion being a fractional value, the number of voxels required to recover a bit can vary—typically two splits, but occasionally three.\n\nAdditionally, it is possible to recover bits from a <a href=\"handbook://block-crucible-burned\">crucible</a> containing solidified material. To do so, place the crucible and <hk>rightmouse</hk>-click on it while holding a <a href=\"handbooksearch://chisel\">chisel</a>.\n\n<strong>Hammer Tweaks</strong>\nThis category currently adds an alternative hammer tool-mode that enables you to flip smithing projects upside-down with a <hk>rightmouse</hk>-click. It can be configured to require <a href=\"handbooksearch://tongs\">tongs</a> in the off-hand.\n<i>Note: When this option is enabled, tongs will also be required to rotate the work item with a <hk>rightmouse</hk>-click.</i>\n\n<strong>Casting Tweaks</strong>\nThis category currently only introduces a configurable penalty to tools obtained through metal molding. The penalty is removed upon tool repair, as it is deemed proper smithing.\n\n<strong>Client Tweaks</strong>\nThese adjustments are purely client-side quality-of-life improvements and include:\n• Additional handbook information for both smithing and metal molding  \n• Display of necessary ingredient amount when selecting a smithing recipe  \n• Visual presentation of current and total voxel counts when examining an <a href=\"handbooksearch://anvil\">anvil</a>  \n• Highlighting of workable temperature in the <a href=\"handbook://block-forge\">forge</a>, <a href=\"handbooksearch://anvil\">anvil</a>, and item tooltips, with a <font color=\"#00A36C\">green</font> indication when the item is at a workable temperature.\n"
 }
